tests/fixtures/type_errors/builtin_bytes_arity.airl
;; ERROR: expects 3 arguments, got 1
;; bytes-to-string requires (List, Int, Int) but only given 1 arg
(bytes-to-string "hello")
